ia1/src/Grammar
stmt  : assn ';'
assn  : id '=' expr
expr  : term addop expr
      | term
term  : fact mulop term
      | fact
fact  : id 
      | num
      | '(' expr ')'
addop : '+'
      | '-'
mulop : '*'
      | '/'
boolexpr : expr relop expr
relop : '<' | '>' | '>=' | '<=' | '==' | '<>'
comt  : '#'
deci  : digit*'.'digit*
negt  : '-'deci
